src/parser/grammar/test_samples/constructors/invalid/static_constructor.5th
// INVALID: Static constructor (forbidden modifier)
class Person {
    Name: string;
    
    static Person(name: string) {
        this.Name = name;
    }
}

main(): int {
    return 0;
}
